# ctftui

./: .gitignore  BYOK.md  LICENSE  README.md  pyproject.toml  requirements.txt
ctftui/: main.py
ctftui/api/: client.py  exceptions.py  models.py
ctftui/config/: constants.py  settings.py
ctftui/ui/: app.py  app_base.py
ctftui/ui/screens/: auth.py  challenges.py  dashboard.py  leaderboard.py  submissions.py
ctftui/utils/: helpers.py  logger.py
tests/: test_api.py  test_config.py
