[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctftui"
version = "0.1.0"
description = "A TUI for interacting with CTFd-based CTF challenges"
authors = [{name = "Hum-Coder"}]
requires-python = ">=3.9"
dependencies = [
    "textual>=0.40.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "cryptography>=41.0.7",
    "typer>=0.9.0",
]

[project.scripts]
ctftui = "ctftui.main:main"
